[tool.poetry]
name = "yoloraft"
version = "0.1.0"
description = ""
authors = ["arunma"]

[tool.poetry.dependencies]
python = "^3.10"
types-PyYAML = "^6.0.11"
click-repl = "^0.2.0"
grpcio = "^1.48.0"
grpcio-tools = "^1.48.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
coverage = "^6.4.2"
flake8 = "^5.0.4"
black = "^22.6.0"
isort = "^5.10.1"
pytest-cov = "^3.0.0"
codecov = "^2.1.12"
mypy = "^0.971"
gitchangelog = "^3.0.4"
mkdocs = "^1.3.1"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
yoloraft = 'yoloraft.cli:main'
